// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Breadcrumb component should be defined and renders correctly (snapshot) 1`] = `
<div>
  <ul
    class="breadcrumb"
  >
    <li
      class="breadcrumb__item"
    >
      <a
        href="#first"
      >
        First
      </a>
    </li>
    <li
      class="breadcrumb__item"
    >
      <a
        href="#Second"
      >
        Second
      </a>
    </li>
    <li
      class="breadcrumb__item"
    >
      <a
        href="#Third"
      >
        Third - long text will be truncated for a better user experience
      </a>
    </li>
  </ul>
</div>
`;

exports[`Breadcrumb component should renders correctly with one children 1`] = `
<div>
  <ul
    class="breadcrumb"
  >
    <li
      class="breadcrumb__item"
    >
      <a
        href="#first"
      >
        First
      </a>
    </li>
  </ul>
</div>
`;
